--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-505.7KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk6702.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.91.101.62, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇫🇷 法国-1.25MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇯🇵 日本-6.67MB/s(Youtube:不良林), server: www.fewa.cf, port: 443, type: vmess, uuid: 9fcf1e10-772c-ce80-d51f-62c708333c50, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /paths/, ws-headers: {Host: www.fewa.cf}}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.91.101.62, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇸🇬 新加坡-305.9KB/s(Youtube:不良林), server: 103.253.26.20, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.20}}
-  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: zecjk.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: zecjk.com}}
+  - {name: 🇸🇬 新加坡-489.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.94MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 43.154.93.14, port: 443, type: vmess, uuid: afe936ee-536e-4e94-8c46-71d222183729, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /vNz3qzS3ml, ws-headers: {Host: 43.154.93.14}}
+  - {name: 🇨🇳 台湾-1.81MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 台湾-2.62MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
