--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇯🇵 日本-4.68MB/s(Youtube:不良林), server: jp5.mayiyun.shop, port: 10014, type: ss, cipher: chacha20-ietf-poly1305, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
   - {name: 🇯🇵 日本-6.67MB/s(Youtube:不良林), server: www.fewa.cf, port: 443, type: vmess, uuid: 9fcf1e10-772c-ce80-d51f-62c708333c50, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /paths/, ws-headers: {Host: www.fewa.cf}}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.91.101.62, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇸🇬 新加坡-305.9KB/s(Youtube:不良林), server: 103.253.26.20, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.20}}
-  - {name: 🇸🇬 新加坡-489.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.94MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: 43.154.93.14, port: 443, type: vmess, uuid: afe936ee-536e-4e94-8c46-71d222183729, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /vNz3qzS3ml, ws-headers: {Host: 43.154.93.14}}
-  - {name: 🇨🇳 台湾-1.81MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 台湾-2.62MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇰🇷 韩国-1.73MB/s(Youtube:不良林), server: kr-07.freesocks5.tk, port: 28996, type: vmess, uuid: 97db7c58-0573-481a-c90c-bc8e41b6b89b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-607.7KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.88MB/s(Youtube:不良林), server: 192.74.238.183, port: 36736, type: vmess, uuid: 31177ee2-6ac5-4e96-bf7a-e50e8ffff0fe, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /yCBfYHrj/, ws-headers: {Host: 192.74.238.183}}
+  - {name: 🇰🇷 韩国-13.32MB/s(Youtube:不良林), server: kr-10.freesocks5.tk, port: 55534, type: vmess, uuid: 0da405a2-469d-4bf3-f705-10fa12231edc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.17MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-653.6KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-489.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.62MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
+      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
