--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-4.68MB/s(Youtube:不良林), server: jp5.mayiyun.shop, port: 10014, type: ss, cipher: chacha20-ietf-poly1305, password: 94ff1ce8-30d2-4b8f-8973-e7046364f260}
-  - {name: 🇯🇵 日本-6.67MB/s(Youtube:不良林), server: www.fewa.cf, port: 443, type: vmess, uuid: 9fcf1e10-772c-ce80-d51f-62c708333c50, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /paths/, ws-headers: {Host: www.fewa.cf}}
-  - {name: 🇰🇷 韩国-1.73MB/s(Youtube:不良林), server: kr-07.freesocks5.tk, port: 28996, type: vmess, uuid: 97db7c58-0573-481a-c90c-bc8e41b6b89b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-1.48MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-607.7KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.88MB/s(Youtube:不良林), server: 192.74.238.183, port: 36736, type: vmess, uuid: 31177ee2-6ac5-4e96-bf7a-e50e8ffff0fe, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /yCBfYHrj/, ws-headers: {Host: 192.74.238.183}}
-  - {name: 🇰🇷 韩国-13.32MB/s(Youtube:不良林), server: kr-10.freesocks5.tk, port: 55534, type: vmess, uuid: 0da405a2-469d-4bf3-f705-10fa12231edc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-6.17MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-653.6KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-5.14MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: 116.129.254.212, port: 48612, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇯🇵 日本-10.93MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.12MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-380.0KB/s(Youtube:不良林), server: zh01lv5au05.feiguayun.xyz, port: 39087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: zh01lv3us01.feiguayun.xyz, port: 50001, type: ss, cipher: aes-256-gcm, password: efafd384-706a-4539-a169-5726c3d51516}
+  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-4.61MB/s(Youtube:不良林), server: 116.129.254.212, port: 48609, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.67MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.73MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-607.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.88MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-13.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.17MB/s(Youtube:不良林)
-      - 🇭🇰 香港-653.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
