--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.14MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.21MB/s(Youtube:不良林), server: 116.129.254.212, port: 48612, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
-  - {name: 🇯🇵 日本-10.93MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.12MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-380.0KB/s(Youtube:不良林), server: zh01lv5au05.feiguayun.xyz, port: 39087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: 103.253.26.20, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.20}}
+  - {name: 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
   - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: zh01lv3us01.feiguayun.xyz, port: 50001, type: ss, cipher: aes-256-gcm, password: efafd384-706a-4539-a169-5726c3d51516}
   - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
   - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
