--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.56MB/s(Youtube:不良林), server: 103.253.26.20, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.20}}
-  - {name: 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: zh01lv5in04.feiguayun.xyz, port: 38087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-5.40MB/s(Youtube:不良林), server: 116.129.254.212, port: 48616, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 38.91.101.62, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇰🇷 韩国-2.20MB/s(Youtube:不良林), server: kr-07.freesocks5.tk, port: 28996, type: vmess, uuid: 97db7c58-0573-481a-c90c-bc8e41b6b89b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.12MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-5.41MB/s(Youtube:不良林), server: 192.74.238.183, port: 36736, type: vmess, uuid: 31177ee2-6ac5-4e96-bf7a-e50e8ffff0fe, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /yCBfYHrj/, ws-headers: {Host: 192.74.238.183}}
   - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: zh01lv3us01.feiguayun.xyz, port: 50001, type: ss, cipher: aes-256-gcm, password: efafd384-706a-4539-a169-5726c3d51516}
   - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: zh01lv5us04.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
-  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
+  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: zh01lv5ge04.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 4b5d7ed5-e1a3-4947-b955-58a39a29cc29}
   - {name: 🇨🇳 中国-4.61MB/s(Youtube:不良林), server: 116.129.254.212, port: 48609, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
   - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.56MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
 rules:
